fix: horizontal scroll bug due to 100% width on body. need to fix spacing in firefox.

--- a/col-grid/style.css
+++ b/col-grid/style.css
@@ -1,6 +1,6 @@
 
 * {box-sizing: border-box;}
-body {width: 100%; background: #fff; font-size: 12px;}
+body {width: auto; background: #fff; font-size: 12px;}
 
 
 #container {width: 450px; margin: 5em auto; line-height: 0;
